--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h2>Angular Webcam Capture Image from Camera</h2>
+  <h2>Angular Webcam Capture Image from Camera -- cm</h2>
   <div class="col-md-12">
     <webcam
       [trigger]="invokeObservable"
@@ -16,3 +16,4 @@
     <img [src]="webcamImage?.imageAsDataUrl" height="400px" />
   </div>
 </div>
+
